# phantom_old_2

./: .gitignore  Cargo.toml  clippy.toml
apps/editor/: Cargo.toml
apps/editor/src/: main.rs
crates/phantom_app/: Cargo.toml
crates/phantom_app/src/: app.rs  resources.rs  state.rs
crates/phantom_app/src/resources/: input.rs  system.rs
crates/phantom_dependencies/: Cargo.toml
crates/phantom_dependencies/src/: lib.rs
crates/phantom_gui/src/: gui.rs
crates/phantom_render/: Cargo.toml
crates/phantom_render/src/: lib.rs  renderer.rs  wgpu.rs
crates/phantom_render/src/wgpu/: texture.rs  uniform.rs  world.rs
crates/phantom_world/src/: animation.rs  camera.rs  gltf.rs  lib.rs  registry.rs  scenegraph.rs  texture.rs  transform.rs  world.rs
src/: lib.rs
