[package]
name = "phantom_dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
bincode = "1.3.3"
bmfont = { version = "0.3.3", features = ["serde"] }
egui = "0.15.0"
egui_wgpu_backend = "0.15.0"
egui_winit_platform = "0.12.0"
env_logger = "0.9.0"
epi = "0.17.0"
gilrs = "0.8.2"
gltf = { version = "1.0.0", features = ["names", "KHR_lights_punctual", "KHR_materials_unlit"] }
image = "0.24.2"
lazy_static = "1.4.0"
legion = "0.4.0"
log = "0.4.17"
nalgebra = "0.31.0"
nalgebra-glm = { version = "0.17.0", features = ["serde-serialize"] }
petgraph = { version = "0.6.0", features = ["serde-1"] }
pollster = "0.2.4"
rapier3d = { version = "0.12.0",  features = ["serde-serialize"] }
raw-window-handle = "0.4.2"
serde = "1.0.137"
wgpu = "0.12.0"
winit = "0.26.1"
